# compose-pydantic

./: .flake8  .gitignore  LICENSE  Makefile  README.md  setup.cfg  tox.ini
compose_pydantic/: lib.py
pip/: dev.txt  requirements.txt
src/compose_pydantic/: __init__.py  models.py
tests/: test_lib.py
tests/compose/: docker-compose.override.yml  docker-compose.yml
