[metadata]
name = compose-pydantic
version = 0.2.0
description = Parse Compose Specification data using Pydantic
url = https://github.com/alexmon/compose-pydantic
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Compose, Pydantic
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
author = Alexandros Monastiriotis
author_email = alexmondev@gmail.com

[options]
packages = compose_pydantic
install_requires =
    pydantic >= 1.9.0
    PyYAML >= 6.0
    mergedeep >= 1.3.4