[metadata]
name = compose-pydantic
version = 0.2.0
description = Parse Compose Specification data using Pydantic
url = https://github.com/alexmon/compose-pydantic
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Compose, Pydantic
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
author = Alexandros Monastiriotis
author_email = alexmondev@gmail.com

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    pydantic == 1.9.0
    PyYAML >= 6.0
    mergedeep >= 1.3.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# installed via `pip install .[dev]`
dev =
    IPython

# NB: This section is used by CI, via `make test`, which invokes tox.  See also `tox.ini`
# installed via `pip install .[testing]`
testing =
    IPython
    tox
    pytest
    pytest-cov
    mock
    flake8==5.0.4
